--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <h2>Contact</h2>
       <p>
         <a href="https://www.linkedin.com/in/n-k-kaushik-21nkk/" target="_blank" rel="noopener">LinkedIn</a> ·
-        <a href="https://github.com/<your-username>" target="_blank" rel="noopener">GitHub</a> ·
+        <a href="https://nk-kaushik.github.io/" target="_blank" rel="noopener">GitHub</a> ·
         <a href="mailto:kaushik3@umd.edu">Email</a>
       </p>
     </div>
