--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     .loader svg{position:absolute;inset:0}
     .loader .k{font:700 64px/1 ui-sans-serif,system-ui,Segoe UI,Inter,Arial;fill:#b91c1c;letter-spacing:1px}
     /* spinning strokes */
-    .spin-slow{animation:spin 2.2s linear infinite}
-    .spin-fast{animation:spin 1.1s linear infinite reverse}
+    .spin-slow{animation:spin 3.3s linear infinite}
+    .spin-fast{animation:spin 1.5s linear infinite reverse}
     @keyframes spin{to{transform:rotate(360deg)}}
     @media (prefers-reduced-motion: reduce){.spin-slow,.spin-fast{animation:none}}
   </style>
@@ -263,14 +263,23 @@
   </div>
   <script>document.getElementById('year').textContent=new Date().getFullYear()</script>
   <script>
-    // Hide preloader when page fully loads
-    window.addEventListener('load', function(){
-      var p = document.getElementById('preloader');
-      if(!p) return;
-      p.classList.add('hide');
-      // safety removal after transition
-      setTimeout(function(){ if(p && p.parentNode) p.parentNode.removeChild(p); }, 800);
-    });
-  </script>
+  // Keep the loader visible for at least this long (in ms)
+  const MIN_DISPLAY_MS = 1500; // ← increase this number to keep it longer
+
+  const start = performance.now(); // when page started loading
+  window.addEventListener('load', function(){
+    var p = document.getElementById('preloader');
+    if(!p) return;
+    const elapsed = performance.now() - start;
+    const wait = Math.max(0, MIN_DISPLAY_MS - elapsed);
+    setTimeout(function(){
+      p.classList.add('hide');                 // triggers the CSS fade (.6s)
+      setTimeout(function(){                   // remove after fade
+        if(p && p.parentNode) p.parentNode.removeChild(p);
+      }, 800);
+    }, wait);
+  });
+</script>
+
 </body>
 </html>
