--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 @keyframes royalPulse{from{transform:scale(1); filter:drop-shadow(0 2px 0 rgba(0,0,0,.6)) drop-shadow(0 0 8px rgba(185,28,28,.35))} to{transform:scale(1.07); filter:drop-shadow(0 2px 0 rgba(0,0,0,.65)) drop-shadow(0 0 18px rgba(185,28,28,.6))}}
 @media (prefers-reduced-motion: reduce){.loader .k{animation:none}} 
     /* spinning strokes */
-    .spin-slow{animation:spin 4.8s linear infinite}
-    .spin-fast{animation:spin 2.4s linear infinite reverse}
+    .spin-slow{animation:spin 2.2s linear infinite}
+    .spin-fast{animation:spin 1.1s linear infinite reverse}
     @keyframes spin{to{transform:rotate(360deg)}}
     @media (prefers-reduced-motion: reduce){.spin-slow,.spin-fast{animation:none}}
   </style>
@@ -169,22 +169,28 @@
         </div>
       </div>
       <nav>
-        <a href="#projects">Projects</a>
-        <a href="#experience">Experience</a>
         <a href="#about">About</a>
+        <a href="#experience">Work Experience</a>
+        <a href="#school">School</a>
+        <a href="#volunteering">Volunteering</a>
+        <a href="#certs">Certifications</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
 
-    <div class="hero" data-fade="2">
-      <h1>Building data‑driven software.</h1>
-      <p class="subtitle">Ex‑Accenture (ETL & AWS Data Lake). Teaching Assistant for databases & secure software. I enjoy clean backends, robust data models, and usable UIs. Open to full‑time SWE/Data roles in the U.S.</p>
-      <div class="badges">
-        <span class="badge">Python • SQL • PL/SQL</span>
-        <span class="badge">AWS • ETL • Data Lakes</span>
-        <span class="badge">Django • FastAPI • React</span>
-        <span class="badge">PostgreSQL • MongoDB</span>
+    <div class="hero" data-fade="2" style="display:grid;grid-template-columns:104px 1fr;gap:16px;align-items:center">
+      <img class="avatar" src="assets/headshot.jpg" alt="Headshot of Keerthi Kaushik Neelagiri" style="width:96px;height:96px;border-radius:50%;object-fit:cover;border:1px solid var(--border)" onerror="this.style.display='none'">
+      <div>
+        <h1 style="margin:0">Keerthi Kaushik Neelagiri</h1>
+        <p class="subtitle">MS Software Engineering @ UMD (Dec 2025). Ex‑Accenture (ETL & AWS Data Lake). Building clean backends and data‑driven products.</p>
+        <div class="badges">
+          <span class="badge">Python • SQL • PL/SQL</span>
+          <span class="badge">AWS • ETL • Data Lakes</span>
+          <span class="badge">Django • FastAPI • React</span>
+          <span class="badge">PostgreSQL • MongoDB</span>
+        </div>
       </div>
+    </div>
       <div class="inline-links">
         <a class="cta" href="resume.pdf">View Résumé</a>
         <a class="cta alt" href="https://github.com/nk-kaushik" target="_blank" rel="noopener">GitHub</a>
@@ -192,42 +198,123 @@
       </div>
     </div>
 
-    <section id="projects" data-fade="2">
-      <h2>Selected Projects</h2>
+    <section id="about" data-fade="2">
+      <h2>About</h2>
+      <div class="card">
+        <p>I’m a graduate student at the University of Maryland (Dec 2025) focused on software engineering and data systems. Previously at Accenture on AWS data lakes & ETL. I like designing resilient backends, thoughtful schemas, and clean developer experiences.</p>
+      </div>
+    </section>
+
+    <section id="experience" data-fade="3">
+      <h2>Work Experience</h2>
       <div class="grid">
-        <article class="card half">
-          <h3>Media/Publishing — TBD</h3>
-          <div class="meta">Python · FastAPI · PostgreSQL</div>
-          <p>Data‑driven news pipeline with topic clustering and summarization. Public API + dashboard.</p>
-          <div>
-            <a href="#">GitHub</a> · <a href="#">Live Demo</a>
-          </div>
-          <div class="tags">
-            <span class="tag">ETL</span><span class="tag">NLP</span><span class="tag">Backend</span>
-          </div>
-        </article>
-        <article class="card half">
-          <h3>Construction — TBD</h3>
-          <div class="meta">React · Node · MongoDB</div>
-          <p>Field data capture + analytics for site progress (photo logs, materials, schedule deltas).</p>
-          <div>
-            <a href="#">GitHub</a> · <a href="#">Live Demo</a>
-          </div>
-          <div class="tags">
-            <span class="tag">Dashboards</span><span class="tag">Data Viz</span><span class="tag">API</span>
-          </div>
-        </article>
-        <article class="card half">
-          <h3>Healthcare — TBD</h3>
-          <div class="meta">Django · Pandas</div>
-          <p>De‑identified patient metrics tracker with outcomes analysis and role‑based access.</p>
-          <div>
-            <a href="#">GitHub</a> · <a href="#">Live Demo</a>
-          </div>
-          <div class="tags">
-            <span class="tag">RBAC</span><span class="tag">Analytics</span><span class="tag">CRUD</span>
-          </div>
-        </article>
+        <div class="card">
+          <strong>Teaching Assistant — Foundations of Databases for Web Apps</strong>
+          <div class="meta">University of Maryland • 2025</div>
+          <ul class="list">
+            <li>Led weekly labs; guided SQL/NoSQL and DB‑web integration.</li>
+            <li>Prepared materials, graded, and provided constructive feedback.</li>
+            <li>Helped students with query optimization, transactions, and crash recovery concepts.</li>
+          </ul>
+        </div>
+        <div class="card">
+          <strong>Associate Software Engineer — Accenture</strong>
+          <div class="meta">Data Ingestion • Pharma • AWS</div>
+          <ul class="list">
+            <li>Built ETL pipelines to AWS data lake; maintained Dev/Prod/UAT.</li>
+            <li>Migrated datasets; improved reliability and monitoring.</li>
+            <li>Collaborated across teams to streamline deployments.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="school" data-fade="3">
+      <h2>School</h2>
+      <div class="card">
+        <strong>University of Maryland, College Park</strong>
+        <div class="meta">M.Eng., Software Engineering • Expected Dec 2025</div>
+        <ul class="list">
+          <li>Coursework: Databases for Web Apps, Secure Software Engineering, Digital Forensics & IR, Requirements Engineering.</li>
+          <li>Clubs: AI/ML at UMD, Cinematheque, Table Tennis, Squash, Filmmakers, UNICEF, Yogi Terps.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="volunteering" data-fade="3">
+      <h2>Volunteering</h2>
+      <div class="card">
+        <strong>National Cadet Corps (India) — Cadet</strong>
+        <ul class="list">
+          <li>Developed leadership, teamwork, and discipline through service activities.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="certs" data-fade="3">
+      <h2>Certifications</h2>
+      <div class="card">
+        <ul class="list">
+          <li>Oracle PL/SQL (training) — Accenture</li>
+          <li>AWS fundamentals / ETL (coursework & project experience)</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="contact" data-fade="3">
+      <h2>Contact</h2>
+      <div class="card">
+        <style>
+          .icon-row{display:flex;gap:16px;flex-wrap:wrap}
+          .icon-link{display:flex;align-items:center;gap:10px;padding:10px 14px;border-radius:12px;border:1px solid var(--border);
+            text-decoration:none;color:var(--text);background:linear-gradient(180deg,#101010,#0d0d0d);box-shadow:0 0 0 1px rgba(212,175,55,.12) inset;transition:transform .15s ease, box-shadow .2s ease, color .2s}
+          .icon-link:hover{transform:translateY(-1px);box-shadow:0 0 0 1px var(--gold) inset, 0 8px 24px rgba(212,175,55,.12)}
+          .icon svg{width:22px;height:22px;filter:drop-shadow(0 0 6px rgba(212,175,55,.25))}
+          .icon .core{fill:#d4af37}
+          .icon-link.instagram .core{fill:#b91c1c}
+          .icon-link.email .core{fill:#d4af37}
+        </style>
+        <div class="icon-row">
+          <a class="icon-link" href="https://github.com/nk-kaushik" target="_blank" rel="noopener">
+            <span class="icon" aria-hidden="true">
+              <!-- GitHub -->
+              <svg viewBox="0 0 24 24" role="img" aria-label="GitHub">
+                <path class="core" d="M12 .5a12 12 0 0 0-3.79 23.4c.6.11.82-.26.82-.58v-2.02c-3.34.73-4.04-1.61-4.04-1.61-.55-1.39-1.34-1.76-1.34-1.76-1.1-.76.08-.75.08-.75 1.22.08 1.86 1.26 1.86 1.26 1.08 1.85 2.83 1.31 3.52 1 .11-.79.42-1.31.76-1.61-2.66-.3-5.46-1.33-5.46-5.9 0-1.3.47-2.37 1.25-3.2-.13-.31-.54-1.56.12-3.25 0 0 1.01-.32 3.3 1.22a11.5 11.5 0 0 1 6 0c2.29-1.54 3.3-1.22 3.3-1.22.66 1.69.25 2.94.12 3.25.78.83 1.25 1.9 1.25 3.2 0 4.58-2.8 5.6-5.47 5.9.43.37.81 1.1.81 2.22v3.29c0 .32.22.69.82.58A12 12 0 0 0 12 .5z"/>
+              </svg>
+            </span>
+            <span>github.com/nk-kaushik</span>
+          </a>
+
+          <a class="icon-link" href="https://www.linkedin.com/in/n-k-kaushik-21nkk/" target="_blank" rel="noopener">
+            <span class="icon" aria-hidden="true">
+              <!-- LinkedIn -->
+              <svg viewBox="0 0 24 24" role="img" aria-label="LinkedIn">
+                <path class="core" d="M20.45 20.45h-3.56v-5.2c0-1.24-.02-2.84-1.73-2.84-1.74 0-2 1.36-2 2.75v5.29H9.6V9h3.42v1.56h.05c.48-.9 1.66-1.85 3.42-1.85 3.66 0 4.34 2.41 4.34 5.55v6.19ZM5.34 7.43A2.06 2.06 0 1 1 5.33 3.3a2.06 2.06 0 0 1 .01 4.12ZM7.12 20.45H3.56V9h3.56v11.45Z"/>
+              </svg>
+            </span>
+            <span>LinkedIn</span>
+          </a>
+
+          <a class="icon-link email" href="mailto:kaushik3@umd.edu">
+            <span class="icon" aria-hidden="true">
+              <!-- Mail -->
+              <svg viewBox="0 0 24 24" role="img" aria-label="Email">
+                <path class="core" d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm-1.4 4.25-6.22 4.66a1 1 0 0 1-1.16 0L5 8.25V8l7 5 7-5v.25Z"/>
+              </svg>
+            </span>
+            <span>kaushik3@umd.edu</span>
+          </a>
+
+          <a class="icon-link instagram" href="https://www.instagram.com/nkk_21/" target="_blank" rel="noopener">
+            <span class="icon" aria-hidden="true">
+              <!-- Instagram -->
+              <svg viewBox="0 0 24 24" role="img" aria-label="Instagram">
+                <path class="core" d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5Zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7Zm5 3.5a5.5 5.5 0 1 1 0 11 5.5 5.5 0 0 1 0-11Zm0 2a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Zm6.25-.75a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"/>
+              </svg>
+            </span>
+            <span>Instagram</span>
+          </a>
+        </div>
       </div>
     </section>
 
