--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta property="og:type" content="website"/>
   <meta property="og:image" content="assets/og-image.png"/>
   <link rel="icon" href="assets/favicon.ico"/>
+  <!-- Royal display fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700;800&family=Marcellus&display=swap" rel="stylesheet">
   <style>
     /*
       THEME: Royal • Majestic • Grand • Cool • Smooth
@@ -27,14 +29,16 @@
       --radius:18px;          /* grand rounded corners */
       --space:16px;           /* base spacing */
       --container:1000px;     /* content width */
-      --font: ui-sans-serif, system-ui, -apple-system, Segoe UI, Inter, Roboto, Arial, sans-serif;
+      --font-heading: 'Cinzel', serif; /* royal display */
+      --font-body: 'Marcellus', serif;  /* elegant readable */
+      --font: var(--font-body);
       --shadow: 0 1px 0 rgba(212,175,55,0.15), 0 6px 24px rgba(0,0,0,0.35);
       --ring: 0 0 0 1px var(--gold) inset, 0 0 0 6px rgba(212,175,55,.06);
     }
 
     *{box-sizing:border-box}
     html,body{margin:0;padding:0}
-    body{font-family:var(--font);background:var(--bg);color:var(--text);line-height:1.65}
+    body{font-family:var(--font-body);background:var(--bg);color:var(--text);line-height:1.7}
     a{color:var(--gold);text-decoration:none}
     a:hover{text-decoration:underline}
 
@@ -48,8 +52,8 @@
     .wrap{max-width:var(--container);margin:0 auto;padding:28px}
     header{display:flex;align-items:center;justify-content:space-between;gap:16px}
     .brand{display:flex;align-items:center;gap:12px}
-    .avatar{width:48px;height:48px;border-radius:50%;object-fit:cover;border:1px solid var(--border);background:#111}
-    .name{font-weight:800;font-size:1.2rem;letter-spacing:.3px}
+    .avatar{width:112px;height:112px;border-radius:50%;object-fit:cover;border:1px solid var(--border);background:#111} @media(min-width:900px){.avatar{width:128px;height:128px}}
+    .name{font-weight:800;font-size:1.25rem;letter-spacing:.35px;font-family:var(--font-heading)}
     nav a{margin-left:18px;color:var(--text);opacity:.9}
     nav a:hover{color:var(--gold)}
 
@@ -64,7 +68,7 @@
       -webkit-mask-composite:xor;mask-composite:exclude
     }
 
-    h1{margin:0 0 8px;font-size:1.9rem}
+    h1{margin:0 0 8px;font-size:2.1rem;font-family:var(--font-heading);letter-spacing:.3px;text-shadow:0 1px 0 rgba(0,0,0,.4)}
     .subtitle{color:var(--muted);margin-top:4px}
 
     .badges{display:flex;flex-wrap:wrap;gap:8px;margin-top:12px}
@@ -79,7 +83,7 @@
     .cta.alt:hover{box-shadow:0 0 0 1px var(--red) inset, 0 10px 30px rgba(185,28,28,.25)}
 
     section{margin-top:28px}
-    h2{margin:0 0 12px;font-size:1.4rem;letter-spacing:.2px}
+    h2{margin:0 0 12px;font-size:1.45rem;letter-spacing:.25px;font-family:var(--font-heading)}
 
     .grid{display:grid;grid-template-columns:repeat(12,1fr);gap:16px}
     .card{grid-column:span 12;border:1px solid var(--border);background:linear-gradient(180deg, #0e0e0e, var(--panel));
@@ -112,8 +116,8 @@
 @keyframes royalPulse{from{transform:scale(1); filter:drop-shadow(0 2px 0 rgba(0,0,0,.6)) drop-shadow(0 0 8px rgba(185,28,28,.35))} to{transform:scale(1.07); filter:drop-shadow(0 2px 0 rgba(0,0,0,.65)) drop-shadow(0 0 18px rgba(185,28,28,.6))}}
 @media (prefers-reduced-motion: reduce){.loader .k{animation:none}} 
     /* spinning strokes */
-    .spin-slow{animation:spin 2.4s linear infinite}
-    .spin-fast{animation:spin 1.2s linear infinite reverse}
+    .spin-slow{animation:spin 2.2s linear infinite}
+    .spin-fast{animation:spin 1.1s linear infinite reverse}
     @keyframes spin{to{transform:rotate(360deg)}}
     @media (prefers-reduced-motion: reduce){.spin-slow,.spin-fast{animation:none}}
   </style>
@@ -146,7 +150,7 @@
       <svg viewBox="0 0 100 100" aria-hidden="true">
         <defs>
           <radialGradient id="kplate" cx="50%" cy="50%" r="50%">
-            <stop offset="0%"  stop-color="#b91c1c" stop-opacity="0.20"/>
+            <stop offset="0%" stop-color="#b91c1c" stop-opacity="0.20"/>
             <stop offset="70%" stop-color="#b91c1c" stop-opacity="0.10"/>
             <stop offset="100%" stop-color="#000000" stop-opacity="0.0"/>
           </radialGradient>
@@ -159,7 +163,6 @@
       </svg>
     </div>
   </div>
-
   <div class="wrap">
     <header data-fade="1">
       <div class="brand">
@@ -181,7 +184,7 @@
 
     <div class="hero" data-fade="2">
       <h1 style="margin:0">Keerthi Kaushik Neelagiri</h1>
-      <p class="subtitle">MS Software Engineering @ UMD (Dec 2025). Ex-Accenture (ETL & AWS Data Lake). Building clean backends and data-driven products.</p>
+      <p class="subtitle">MS Software Engineering @ UMD (Dec 2025). Ex‑Accenture (ETL & AWS Data Lake). Building clean backends and data‑driven products.</p>
       <div class="badges">
         <span class="badge">Python • SQL • PL/SQL</span>
         <span class="badge">AWS • ETL • Data Lakes</span>
@@ -189,14 +192,12 @@
         <span class="badge">PostgreSQL • MongoDB</span>
       </div>
     </div>
-
-    <section id="about" data-fade="2">
-      <h2>About</h2>
-      <div class="card">
-        <p>I’m a graduate student at the University of Maryland (Dec 2025) focused on software engineering and data systems. Previously at Accenture on AWS data lakes & ETL. I like designing resilient backends, thoughtful schemas, and clean developer experiences.</p>
       </div>
-    </section>
+    </div>
+      
+    </div>
 
+    
     <section id="experience" data-fade="3">
       <h2>Work Experience</h2>
       <div class="grid">
@@ -204,7 +205,7 @@
           <strong>Teaching Assistant — Foundations of Databases for Web Apps</strong>
           <div class="meta">University of Maryland • 2025</div>
           <ul class="list">
-            <li>Led weekly labs; guided SQL/NoSQL and DB-web integration.</li>
+            <li>Led weekly labs; guided SQL/NoSQL and DB‑web integration.</li>
             <li>Prepared materials, graded, and provided constructive feedback.</li>
             <li>Helped students with query optimization, transactions, and crash recovery concepts.</li>
           </ul>
@@ -262,12 +263,15 @@
             text-decoration:none;color:var(--text);background:linear-gradient(180deg,#101010,#0d0d0d);box-shadow:0 0 0 1px rgba(212,175,55,.12) inset;transition:transform .15s ease, box-shadow .2s ease, color .2s}
           .icon-link:hover{transform:translateY(-1px);box-shadow:0 0 0 1px var(--gold) inset, 0 8px 24px rgba(212,175,55,.12)}
           .icon svg{width:22px;height:22px;filter:drop-shadow(0 0 6px rgba(212,175,55,.25))}
-          .icon .core{fill:#d4af37}              /* default gold */
-          .icon-link.linkedin .core{fill:#0A66C2}/* LinkedIn blue */
+          /* Default gold fill */
+          .icon .core{fill:#d4af37}
+          /* LinkedIn official blue */
+          .icon-link.linkedin .core{fill:#0A66C2}
         </style>
         <div class="icon-row">
           <a class="icon-link" href="https://github.com/nk-kaushik" target="_blank" rel="noopener">
             <span class="icon" aria-hidden="true">
+              <!-- GitHub -->
               <svg viewBox="0 0 24 24" role="img" aria-label="GitHub">
                 <path class="core" d="M12 .5a12 12 0 0 0-3.79 23.4c.6.11.82-.26.82-.58v-2.02c-3.34.73-4.04-1.61-4.04-1.61-.55-1.39-1.34-1.76-1.34-1.76-1.1-.76.08-.75.08-.75 1.22.08 1.86 1.26 1.86 1.26 1.08 1.85 2.83 1.31 3.52 1 .11-.79.42-1.31.76-1.61-2.66-.3-5.46-1.33-5.46-5.9 0-1.3.47-2.37 1.25-3.2-.13-.31-.54-1.56.12-3.25 0 0 1.01-.32 3.3 1.22a11.5 11.5 0 0 1 6 0c2.29-1.54 3.3-1.22 3.3-1.22.66 1.69.25 2.94.12 3.25.78.83 1.25 1.9 1.25 3.2 0 4.58-2.8 5.6-5.47 5.9.43.37.81 1.1.81 2.22v3.29c0 .32.22.69.82.58A12 12 0 0 0 12 .5z"/>
               </svg>
@@ -277,6 +281,7 @@
 
           <a class="icon-link linkedin" href="https://www.linkedin.com/in/n-k-kaushik-21nkk/" target="_blank" rel="noopener">
             <span class="icon" aria-hidden="true">
+              <!-- LinkedIn (official blue) -->
               <svg viewBox="0 0 24 24" role="img" aria-label="LinkedIn">
                 <path class="core" d="M20.45 20.45h-3.56v-5.2c0-1.24-.02-2.84-1.73-2.84-1.74 0-2 1.36-2 2.75v5.29H9.6V9h3.42v1.56h.05c.48-.9 1.66-1.85 3.42-1.85 3.66 0 4.34 2.41 4.34 5.55v6.19ZM5.34 7.43A2.06 2.06 0 1 1 5.33 3.3a2.06 2.06 0 0 1 .01 4.12ZM7.12 20.45H3.56V9h3.56v11.45Z"/>
               </svg>
@@ -286,6 +291,7 @@
 
           <a class="icon-link email" href="mailto:kaushik3@umd.edu">
             <span class="icon" aria-hidden="true">
+              <!-- Mail -->
               <svg viewBox="0 0 24 24" role="img" aria-label="Email">
                 <path class="core" d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm-1.4 4.25-6.22 4.66a1 1 0 0 1-1.16 0L5 8.25V8l7 5 7-5v.25Z"/>
               </svg>
@@ -295,6 +301,7 @@
 
           <a class="icon-link instagram" href="https://instagram.com/" target="_blank" rel="noopener">
             <span class="icon" aria-hidden="true">
+              <!-- Instagram (original gradient) -->
               <svg viewBox="0 0 24 24" role="img" aria-label="Instagram">
                 <defs>
                   <radialGradient id="igGrad" cx="33%" cy="100%" r="95%">
@@ -314,33 +321,59 @@
       </div>
     </section>
 
+    <section id="experience" data-fade="3">
+      <h2>Experience</h2>
+      <div class="grid">
+        <div class="card">
+          <strong>Teaching Assistant — Foundations of Databases for Web Apps</strong>
+          <div class="meta">University of Maryland • 2025</div>
+          <ul class="list">
+            <li>Led weekly labs; guided SQL/NoSQL and DB‑web integration.</li>
+            <li>Prepared materials, graded, and provided constructive feedback.</li>
+            <li>Helped students with query optimization, transactions, and crash recovery concepts.</li>
+          </ul>
+        </div>
+        <div class="card">
+          <strong>Associate Software Engineer — Accenture</strong>
+          <div class="meta">Data Ingestion • Pharma • AWS</div>
+          <ul class="list">
+            <li>Built ETL pipelines to AWS data lake; maintained Dev/Prod/UAT.</li>
+            <li>Migrated datasets; improved reliability and monitoring.</li>
+            <li>Collaborated across teams to streamline deployments.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="about" data-fade="3">
+      <h2>About</h2>
+      <div class="card">
+        <p>Master’s student in Software Engineering at UMD (Dec 2025). Interested in impactful software that blends solid engineering with clear data stories. Outside class, I’m active in clubs and enjoy squash, table tennis, and filmmaking.</p>
+      </div>
+    </section>
+
+    <section id="contact" data-fade="3">
+      <h2>Contact</h2>
+      <div class="card">
+        <p>Email: <a href="mailto:kaushik3@umd.edu">kaushik3@umd.edu</a></p>
+        <p>Also on <a href="https://github.com/nk-kaushik" target="_blank" rel="noopener">GitHub</a> and <a href="https://www.linkedin.com/in/n-k-kaushik-21nkk/" target="_blank" rel="noopener">LinkedIn</a>.</p>
+      </div>
+    </section>
+
     <footer>
-      © <span id="year"></span> Keerthi Kaushik Neelagiri • nk-kaushik.github.io
+      © <span id="year"></span> Keerthi Kaushik Neelagiri • nk‑kaushik.github.io
     </footer>
   </div>
-
   <script>document.getElementById('year').textContent=new Date().getFullYear()</script>
   <script>
-    // Keep the preloader for at least this long (ms), then fade it
-    const MIN_DISPLAY_MS = 1500;
-    const start = performance.now();
-
-    function hidePreloader() {
-      const p = document.getElementById('preloader');
-      if (!p) return;
+    // Hide preloader when page fully loads
+    window.addEventListener('load', function(){
+      var p = document.getElementById('preloader');
+      if(!p) return;
       p.classList.add('hide');
-      setTimeout(() => { if (p && p.parentNode) p.parentNode.removeChild(p); }, 800);
-    }
-
-    // On full load, ensure minimum display time then hide
-    window.addEventListener('load', () => {
-      const elapsed = performance.now() - start;
-      const wait = Math.max(0, MIN_DISPLAY_MS - elapsed);
-      setTimeout(hidePreloader, wait);
+      // safety removal after transition
+      setTimeout(function(){ if(p && p.parentNode) p.parentNode.removeChild(p); }, 800);
     });
-
-    // Fallback: hide anyway after 6s in case 'load' never fires
-    setTimeout(hidePreloader, 6000);
   </script>
 </body>
 </html>
