changes made is school section

--- a/index.html
+++ b/index.html
@@ -197,6 +197,21 @@
           <li>Clubs: AI/ML at UMD, Cinematheque, Table Tennis, Squash, Filmmakers, UNICEF, Yogi Terps.</li>
         </ul>
       </div>
+
+      <div class="card">
+        <strong>University of Maryland, College Park</strong>
+        <div class="meta">Graduate Certificate, Data Science •  MAY 2025</div>
+        <ul class="list">
+          <li>Coursework: Introdution to Data Science, Introduction to Machine Learning, Probability & Statistics, Data Representation and Modelling.</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <strong>University of Maryland, College Park</strong>
+        <div class="meta">B.Tech, Electronics and Communication Engineering •  JULY 2022</div>
+        <ul class="list">
+        </ul>
+      </div>
     </section>
 
     <section id="volunteering" data-fade="3">
