changes made in volunteering and contact

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       </div>
 
       <div class="card">
-        <strong>University of Maryland, College Park</strong>
+        <strong>Mahatma Gandhi Institute of Technology, Hyderabad, India</strong>
         <div class="meta">B.Tech, Electronics and Communication Engineering •  JULY 2022</div>
         <ul class="list">
         </ul>
@@ -217,9 +217,29 @@
     <section id="volunteering" data-fade="3">
       <h2>Volunteering</h2>
       <div class="card">
+        <strong>Graduate Student Senator  — Engineering Graduate Student Society(University of Maryland)</strong>
+        <ul class="list">
+          <li>Elected as the Master’s Representative to the EGSS Council, representing the interests of graduate
+ students in the A. James Clark School of Engineering.</li>
+          <li>Actively assess and present student concerns about safety, working conditions, and departmental
+ relationships with the Dean and administration.</li>
+          <li>Collaborate with representatives from all engineering departments to promote educational and social
+ initiatives that enhance the graduate student experience.</li>
+          <li> Support university-wide diversity and inclusion goals by contributing to policy discussions and
+ community engagement activities.</li>
+        </ul>
+      </div>
+
+      <div class="card">
         <strong>National Cadet Corps (India) — Cadet</strong>
         <ul class="list">
-          <li>Developed leadership, teamwork, and discipline through service activities.</li>
+          <li>Completed rigorous training in leadership, discipline, and teamwork through structured drills and
+ exercises.</li>
+          <li>Participated in multiple camps and parades, demonstrating commitment to national service and civic
+ responsibility.</li>
+          <li> Participated in community service initiatives, contributing 50+ hours to social welfare and public
+ awareness programs.</li>
+          <li>Learned the fundamentals of naval operations, including navigation, seamanship, and survival skills.</li>
         </ul>
       </div>
     </section>
@@ -265,7 +285,7 @@
             <span>LinkedIn</span>
           </a>
 
-          <a class="icon-link email" href="mailto:kaushik3@umd.edu">
+          <a class="icon-link email" href="mailto:keerthikaushik99@gmail.com">
             <span class="icon" aria-hidden="true">
               <svg viewBox="0 0 24 24" role="img" aria-label="Email">
                 <path class="core" d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm-1.4 4.25-6.22 4.66a1 1 0 0 1-1.16 0L5 8.25V8l7 5 7-5v.25Z"/>
