work experience added

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
         </div>
       </div>
       <nav>
+        <a href="#work experience">Work Experience</a>
         <a href="#school">School</a>
         <a href="#volunteering">Volunteering</a>
         <a href="#certs">Certifications</a>
@@ -186,7 +187,19 @@
     </div>
 
     
-    
+      <section id="work experience" data-fade="3">
+      <h2>Work Experience</h2>
+      <div class="card">
+        <ul class="list">
+          <li>Graduate Teaching Assistant– ENPM 687: Digital Forensics and Incidence Responses - UMD</li>
+          <li>Graduate Teaching Assistant– ENEB 457: Foundations of Databases for Web Applications - UMD</li>
+          <li>Associate Software Engineer - Accenture</li>
+          <li>Network Engineer Intern - BSNL</li>
+        </ul>
+      </div>
+    </section>
+
+
     <section id="school" data-fade="3">
       <h2>School</h2>
       <div class="card">
@@ -217,7 +230,7 @@
     <section id="volunteering" data-fade="3">
       <h2>Volunteering</h2>
       <div class="card">
-        <strong>Graduate Student Senator  — Engineering Graduate Student Society(University of Maryland)</strong>
+        <strong>Graduate Student Senator  — Engineering Graduate Student Society (University of Maryland)</strong>
         <ul class="list">
           <li>Elected as the Master’s Representative to the EGSS Council, representing the interests of graduate
  students in the A. James Clark School of Engineering.</li>
