--- a/index.html
+++ b/index.html
@@ -363,17 +363,17 @@
 
     <!-- HERO -->
     <div class="hero" data-fade="2">
-      <h1>Keerthi Kaushik Neelagiri</h1>
+      <h1>About</h1>
       <p class="subtitle">
-        Graduate Software Engineer at UMD (M.Eng., Dec 2025). Ex-Accenture (ETL & AWS Data Lakes).
-        Interested in secure backends, data platforms, and systems that tell clear stories with data.
+        I am driven by resilience, persistence, and an unwavering belief in staying true to my values. No matter how hard life hits, I keep moving forward — relentlessly, purposefully, and without compromise. I take on big challenges with courage, treat uncertainty as an opportunity, and approach life like a strategic game where every move matters.
+
+As an all-rounder with a leadership mindset, I’m not afraid to stand alone, take risks, or push boundaries. I thrive in environments that demand innovation, ownership, and fast learning. My curiosity fuels me; my discipline sustains me.
+
+Professionally, I bring a growing breadth of experience across software engineering, data science, and cybersecurity. My work blends technical depth with strategic thinking — solving real problems, building scalable systems, and making data-driven decisions. I learn quickly, adapt even quicker, and commit fully to every project I take on.
+
+I’m here to create impact, grow continuously, and contribute to meaningful, high-value work — while staying grounded in who I am and the principles I live by.
       </p>
-      <div class="badges">
-        <span class="badge">Python • SQL • PL/SQL</span>
-        <span class="badge">AWS • ETL • Data Lakes</span>
-        <span class="badge">Secure Software Engineering</span>
-        <span class="badge">Databases • Data Modelling</span>
-      </div>
+
     </div>
 
     <!-- WORK EXPERIENCE -->
@@ -597,7 +597,7 @@
                 <path class="core" d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm-1.4 4.25-6.22 4.66a1 1 0 0 1-1.16 0L5 8.25V8l7 5 7-5v.25Z"/>
               </svg>
             </span>
-            <span>kaushik3@umd.edu</span>
+            <span>keerthikaushik99@gmail.com</span>
           </a>
 
           <a class="icon-link instagram" href="https://instagram.com/" target="_blank" rel="noopener">
